--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./MemoryMQ/MemoryMQ.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore ./MemoryMQ/MemoryMQ.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal ./MemoryMQ/MemoryMQ.Test/MemoryMQ.Test.csproj
