1. support compress 2. imporve batch insert performance 3. support more options in message options 4. add more benchmark cases

--- a/MemoryMQ/Memory.Benchmark/Memory.Benchmark.csproj
+++ b/MemoryMQ/Memory.Benchmark/Memory.Benchmark.csproj
@@ -11,10 +11,21 @@
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.13.6" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\MemoryMQ\MemoryMQ.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Update="compress_data.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="compress_data.json" />
+      <Content Include="compress_data.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
