--- a/MemoryMQ/MemoryMQ.Test/MemoryMQ.Test.csproj
+++ b/MemoryMQ/MemoryMQ.Test/MemoryMQ.Test.csproj
@@ -27,4 +27,11 @@
       <ProjectReference Include="..\MemoryMQ\MemoryMQ.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="compress_data.json" />
+      <Content Include="compress_data.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
